--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,12 +35,10 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    // Added for AdMob
     compile project(':jokester')
     compile project(':jokedisplayer')
     compile 'com.android.support:appcompat-v7:23.1.1'
-    compile 'com.google.android.gms:play-services:8.4.0'
+    freeCompile 'com.google.android.gms:play-services:8.4.0'
     compile project(path: ':backend', configuration: 'android-endpoints')
     androidTestCompile 'junit:junit:4.12'
 }
-
